syntax = "proto3";
package types;

option go_package = "github.com/canopy-network/canopy/lib";

message ConsensusValidator {
  bytes public_key = 1;
  uint64 voting_power = 2;
  string net_address = 3;
}

message ConsensusValidators {
  repeated ConsensusValidator ValidatorSet = 1;
}